kubernetes/eeg-beta-website-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beta-eeg-website
  namespace: eeg-gruenlicht
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beta-eeg-website
  template:
    metadata:
      name: beta-eeg-website
      labels:
        app: beta-eeg-website
    spec:
      containers:
      - name: beta-eeg-website
        image: oydeu/eeg-gruenlicht:260622
        ports:
        - containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: beta-eeg-website
  namespace: eeg-gruenlicht
spec:
  selector:
    app: beta-eeg-website
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beta-eeg-website
  namespace: eeg-gruenlicht
  annotations:
    certmanager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - beta.eeg-gruenlicht.at
    secretName: beta-eeg-website-tls
  rules:
  - host: beta.eeg-gruenlicht.at
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: beta-eeg-website
            port:
              number: 80
