kubernetes/eeg-website-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eeg-website
  namespace: eeg-gruenlicht
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eeg-website
  template:
    metadata:
      name: eeg-website
      labels:
        app: eeg-website
    spec:
      containers:
      - name: eeg-website
        image: oydeu/eeg-gruenlicht:260814
        ports:
        - containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: eeg-website
  namespace: eeg-gruenlicht
spec:
  selector:
    app: eeg-website
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
---
# Alle vier Hostnamen liefern die Anwendung aus.
# Die Umleitung der Nebenformen auf den Apex passiert NICHT hier -- der
# nginx-Admission-Webhook lehnt "permanent-redirect" mit $request_uri ab.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eeg-website
  namespace: eeg-gruenlicht
  annotations:
    certmanager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - eeg-gruenlicht.at
    - www.eeg-gruenlicht.at
    - xn--eeg-grnlicht-ilb.at
    - www.xn--eeg-grnlicht-ilb.at
    secretName: eeg-website-tls
  rules:
  - host: eeg-gruenlicht.at
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: eeg-website
            port:
              number: 80
  - host: www.eeg-gruenlicht.at
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: eeg-website
            port:
              number: 80
  - host: xn--eeg-grnlicht-ilb.at
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: eeg-website
            port:
              number: 80
  - host: www.xn--eeg-grnlicht-ilb.at
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: eeg-website
            port:
              number: 80
