kubernetes/www-eeg-website-deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eeg-website
  namespace: eeg-gruenlicht
  annotations:
    certmanager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - eeg-gruenlicht.at
        - www.eeg-gruenlicht.at
        - xn--eeg-grnlicht-ilb.at
        - www.xn--eeg-grnlicht-ilb.at
      secretName: eeg-website-tls
  rules:
    - host: eeg-gruenlicht.at
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: eeg-website
                port:
                  number: 80

    - host: www.eeg-gruenlicht.at
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: eeg-website
                port:
                  number: 80

    - host: xn--eeg-grnlicht-ilb.at
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: eeg-website
                port:
                  number: 80

    - host: www.xn--eeg-grnlicht-ilb.at
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: eeg-website
                port:
                  number: 80
